start.sh 更新